@@ -6,6 +6,10 @@
  * src/document.c:
    Fix a crash when USE_GIO_FILEMON is enabled at closing a document
    which was reloaded shortly before.
+ * src/editor.c:
+   When the editor menu is opened by the Menu key, use the text cursor
+   position for retrieving the current word. This fixes disabled
+   Go to Tag items in the menu (#2780044).
 
 
 2009-04-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
